Update quote to Tennyson

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
             <div class="">
 
-                <p>Dude, suckin at something is the first step at being sorta good at something.</p>
-                <p>Jacob "Jake" the Dog, Sr.</p>
+                <p>But the tender grace of a day that is dead
+                    Will never come back to me.</p>
+                <p>Alfred, Lord Tennyson</p>
 
             </div>
 
