class project of quote, initial commit

--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Quote Page</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
-
-<body>
-
-    <div class="main">
-
-        <div class="container">
-
-            <div class="">
-
-                <p>But the tender grace of a day that is dead
-                    Will never come back to me.</p>
-                <p>Alfred, Lord Tennyson</p>
-
-            </div>
-
-        </div>
-    
-    </div>
-
-</body>
+  <body>
+    <main class="main">
+      <div class="container">
+        <article class="quote">
+          <div class="large-quote-start">&#x0201F</div>
+          <p class="quote_script">
+            But the tender grace of a day that is dead
+          </p>  
+          <p class="quote_script2">Will never come back to
+            me.
+          </p>
+          <div class="large-quote-end">&#x201D</div>
+          <div class="poet">Alfred, Lord Tennyson</div>
+        </article>
+      </div>
+    </main>
+  </body>
 </html>
